--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@shoutem/ui": "^0.23.20",
     "expo": "^32.0.0",
+    "firebase": "^6.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "devDependencies": {
+    "babel-plugin-inline-dotenv": "^1.3.3",
     "babel-preset-expo": "^5.0.0"
   },
   "private": true
