--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "expo": "^32.0.0",
     "firebase": "^6.0.2",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-popup-menu": "^0.15.6"
   },
   "devDependencies": {
     "babel-plugin-inline-dotenv": "^1.3.3",
