--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ FIREBASE_DATABASE_URL=https://xxxXXXX.firebaseio.com
 FIREBASE_PROJECT_ID=xxxxXXXX
 FIREBASE_STORAGE_BUCKET=xxxxXXXX.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=xxxxXXXX
+
+F2F_API_KEY=XXXXxxxx
