--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@shoutem/ui": "^0.23.20",
+    "axios": "^0.18.0",
     "expo": "^32.0.0",
     "firebase": "^6.0.2",
     "react": "16.5.0",
